<resources>
    <string name="app_name">Just Java</string>
    <!--Header text for the java coffee application [CHAR LIMIT=20]-->

    <string name="name_quantity">Quantity</string>
    <string name="button">ORDER</string>
    <string name="value_quantity">0</string>
    <string name="order_sum">Oder Summary</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order_summary_text_view">0€</string>
    <string name="order">order</string>
    <string name="Whipped">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="hint_edit">Name</string>
    <string name="toppings">Toppings</string>
    <!--strings in mainActivity-->
    <string name="thanks">Thank you</string>
    <string name="total">Total: €</string>
    <string name="choco">addChocolate?</string>
    <string name="cream">add Whipped cream?</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
</resources>
